Saveing. alignment fix + other config n cleanup.

--- a/css/oc_comment.css
+++ b/css/oc_comment.css
@@ -7,7 +7,20 @@ and open the template in the editor.
     Created on : 19-05-2015, 09:07:56
     Author     : tfpet
 */
-
+.comment_submit_user
+{
+   
+    width: 100%;
+    height: 32px;
+}
+.comment_profile_image
+{
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
+    float:left;
+    margin-right: 5px;
+}
 #oc-comments-wrap
 {
     min-width: 100%;
@@ -30,8 +43,8 @@ and open the template in the editor.
 #comment_logo
 {
     float: right;
-    width: 25px;
-    height: 25px;
+    width: 32px;
+    height: 32px;
     margin-right:5px;
 }
 .oc_comment_parent
@@ -121,7 +134,6 @@ and open the template in the editor.
     color:white !important;
     width: 100px;
     line-height: 100px;
-
 }
 .oc-comment-form-box
 {
@@ -152,7 +164,8 @@ and open the template in the editor.
     font-size: 17px;
     white-space: pre;
     line-height:115%;
-   
+   word-wrap: break-word;
+   white-space: pre-wrap;
 }
 .oc_comments_reply_bar
 {
